--- a/uib/23_03/style.css
+++ b/uib/23_03/style.css
@@ -2,7 +2,7 @@
     background-color: lawngreen;
 } */
 
-img {
+a img {
     width: 300px;
     height: 300px;
     /* width: 25%;
@@ -28,3 +28,8 @@ img:hover {
     opacity: 0.5;
 }
 
+.penguin {
+    width: 10rem;
+    height: 10rem;
+    border: 3px dashed red;
+}
