--- a/uib/03_05/style.css
+++ b/uib/03_05/style.css
@@ -13,18 +13,18 @@ h1 {
     text-align: center;
     margin: 3rem 0;
 }
-
+ 
 .container {
     display: grid;
-    grid-template-columns: 10rem 20rem 10rem;
+    grid-template-columns: 10rem repeat(3, 1fr) 10px 20px 1fr;
     /* grid-template-columns: 1fr 2fr 1fr 1fr 1fr 0.1fr; */
     /* grid-template-columns: repeat(3, 1fr); */
     /* grid-template-columns: repeat(3, 1fr); */
-    gap: 0.5rem;
+    /* gap: 0.5rem; */
     /* column-gap: 1rem;
     row-gap: 1.5rem; */
-    /* justify-content: center; */
-    margin-bottom: 2rem;
+    /* justify-content: center; 
+    margin-bottom: 2rem; */
    
 } 
 
@@ -33,7 +33,7 @@ h1 {
     border: 2px solid dimgray;
     background-color: tomato;
     color: antiquewhite;
-}
+} 
 
 /* *******************container-2*********************** */
 
@@ -42,12 +42,43 @@ h1 {
     border: 2px solid dimgray;
     background-color: purple;
     color: antiquewhite;
-}
+} 
 
-.container-2 {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+ .container-2 {
+    display: grid; 
+    /* grid-template-columns: repeat(2, 1fr); */
+    /* grid-template-columns: minmax(100px, 300px) 1fr repeat(2, 1fr) ; */
     /* minmax function is to set the first amount a minimum height of the row and the second automatically fills the space with amount of content */
     grid-auto-rows: minmax(5rem, auto);
-    gap: 1rem;
+    gap: 1rem; 
+}
+
+/* section  */
+.container-3 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: minmax(50rem, auto);
+}
+
+
+.container-3 article {
+    padding: 2rem;
+    border: 2px solid dimgray;
+    background-color: purple;
+    color: antiquewhite;
+}
+
+/* .orange {
+    display: flex;
+} */
+
+.yell-green {
+    display: flex;
+
+}
+
+@media (max-width: 600px) {
+    .container-3 {
+        grid-template-columns: 1fr;
+    }
 }
