--- a/uib/04_05/style.css
+++ b/uib/04_05/style.css
@@ -66,8 +66,14 @@ div > div:nth-child(3) { */
 
 .cont-2 {
     display: grid;
-    grid-template-columns: 2fr 1fr minmax(25rem, auto);
+    grid-template-columns: 20rem 10rem 20rem;
     gap: 0.5rem;
+    /* justify-content: start; */
+    /* justify-content: end; */
+    /* justify-content: center; */
+    /* justify-content: space-around; */
+    /* justify-content: space-between; */
+    justify-content: space-evenly;
 }
 
 div > div > div:nth-child(-n+5) {
@@ -86,9 +92,43 @@ div > div > div:nth-child(1) {
 }
 
 div > div > div:nth-child(2) {
+     /* justify-self: end aligns the grid item to be flush with the end edge of the cell */
     justify-self: end;
 }
 
 div > div > div:nth-child(3) {
+    /* justify-self: center aligns the grid item in the center of the cell */
     justify-self: center;
+}
+
+div > div > div:nth-child(4) {
+    /* this is the default value so nothing changes */
+    justify-self: stretch;
+}
+
+#child7 {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 20rem;
+}
+
+
+#child7 div:nth-child(1) {
+    /* aligns the grid item to be flush with the start edge of the cell */
+    align-self: start;
+}
+
+#child7 div:nth-child(2) {
+    /* aligns the grid item to be flush with the end edge of the cell */
+    align-self: end;
+}
+
+#child7 div:nth-child(3) {
+    /* aligns the grid item in the center of the cell */
+    align-self: center;
+}
+
+#child7 div:nth-child(4) {
+    /* default value, nothing changes when we add this */
+    align-self: stretch;
 }
