--- a/uib/10_05/style.css
+++ b/uib/10_05/style.css
@@ -85,10 +85,16 @@ ul li::selection {
     width: 25rem;
     clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
     /* clip-path: polygon(20% 0%, 0% 20%, 20% 49%, 0% 80%, 20% 100%, 36% 0, 80% 100%, 100% 80%, 0 57%, 100% 20%, 80% 0%, 0 84%); */
+    transform: rotate(90deg);
+    transition: 2s;
+    transition-delay: 1s;
 }
 
 .clip-2 img:hover {
-    transform: scale(0.5) translate(10rem, 5rem) rotate(30deg);
+    /* transform: scale(0.5) translate(10rem, 5rem) rotate(30deg); */
+    /* transform: scale(0.5); */
+    /* transform: translate(10rem, 5rem); */
+    transform: rotate(90deg);
     transition: 1.2s;
 }
 
